--- a/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -45,6 +45,7 @@ preferences-button.labelWin = گزینه‌ها
 # LOCALIZATION NOTE (preferences-button.tooltipWin): Windows-only tooltip for Options
 preferences-button.tooltipWin2 = باز کردن گزینه‌ها
 
+zoom-controls.tooltiptext2 = کنترل‌های زوم
 
 zoom-out-button.label = کوچک‌ نمایی (زوم به بیرون)
 # LOCALIZATION NOTE(zoom-out-button.tooltiptext2): %S is the keyboard shortcut.
@@ -55,42 +56,43 @@ zoom-out-button.tooltiptext2 = کوچک‌ نمایی( %S)
 # format specifiers, so it needs to be escaped).
 zoom-reset-button.label = %S%%
 # LOCALIZATION NOTE(zoom-reset-button.tooltiptext2): %S is the keyboard shortcut.
-zoom-reset-button.tooltiptext2 = بازگردان به سطح اولیه زوم
+zoom-reset-button.tooltiptext2 = بازگردان به سطح اولیه زوم (%S)
 
 zoom-in-button.label = بزرگ‌نمایی
 # LOCALIZATION NOTE(zoom-in-button.tooltiptext2): %S is the keyboard shortcut.
 zoom-in-button.tooltiptext2 = بزرگ‌نمایی (%S)
 
 edit-controls.label = ابزارهای ویرایش
-edit-controls.tooltiptext2 = ابزارهای ویرایش
+edit-controls.tooltiptext2 = ابزارهای کنترل
 
-cut-button.label = بریدن و برداشتن
+cut-button.label = بریدن و کپی کردن
 # LOCALIZATION NOTE(cut-button.tooltiptext2): %S is the keyboard shortcut.
-cut-button.tooltiptext2 = بریدن و برداشتن (%S)
+cut-button.tooltiptext2 = بریدن و کپی کردن (%S)
 
-copy-button.label = رونوشت برداشتن
+copy-button.label = کپی کردن
 # LOCALIZATION NOTE(copy-button.tooltiptext2): %S is the keyboard shortcut.
-copy-button.tooltiptext2 = رونوشت برداشتن
+copy-button.tooltiptext2 = کپی کردن (%S)
 
 paste-button.label = جایگذاری
 # LOCALIZATION NOTE(paste-button.tooltiptext2): %S is the keyboard shortcut.
 paste-button.tooltiptext2 = جایگذاری (%S)
 
 feed-button.label = دنبال کردن
-feed-button.tooltiptext2 = دنبال کردن این صفحه…
+feed-button.tooltiptext2 = دنبال کردن این صفحه
 
 # LOCALIZATION NOTE (characterencoding-button.label): The \u00ad character at the beginning
 # of the string is used to disable auto hyphenation on the button text when it is displayed
 # in the menu panel.
 characterencoding-button.tooltiptext2 = نمایش گزینه های کدگذاری کاراکترها
 
-email-link-button.tooltiptext3 = ایمیل کردن یک لینک به ابن صفحه
+email-link-button.tooltiptext3 = ایمیل کردن یک لینک به این صفحه
 
 # LOCALIZATION NOTE(quit-button.tooltiptext.linux2): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
-quit-button.tooltiptext.linux2 = خروج %1$S (%2$S)
+quit-button.tooltiptext.linux2 = خروج %1$S ‏(%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
+quit-button.tooltiptext.mac = خروج %1$S ‏(%2$S)
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
@@ -101,7 +103,7 @@ social-share-button.label = به‌اشتراک‌گذاری این صفحه
 social-share-button.tooltiptext = به‌اشتراک‌گذاری این صفحه
 
 panic-button.label = فراموش کردن
-panic-button.tooltiptext = فراموش کردن بعضی  تاریخچه مرورها
+panic-button.tooltiptext = فراموش کردن بعضی تاریخچه مرورها
 
 web-apps-button.label = برنامه‌ها
 web-apps-button.tooltiptext = کشف برنامه‌ها
@@ -109,4 +111,5 @@ web-apps-button.tooltiptext = کشف برنامه‌ها
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
-devtools-webide-button2.label = WebIDE
+devtools-webide-button2.label = IDE وب
+devtools-webide-button2.tooltiptext = باز کردن IDE وب (%S)
