--- a/sk/toolkit/chrome/global/devtools/debugger.properties
+++ b/sk/toolkit/chrome/global/devtools/debugger.properties
@@ -14,11 +14,46 @@
 # dialog that prompts the user to allow the incoming connection.
 remoteIncomingPromptTitle=Prichádzajúce spojenie
 
-# LOCALIZATION NOTE (remoteIncomingPromptMessage): The message displayed on the
+# LOCALIZATION NOTE (remoteIncomingPromptHeader): Header displayed on the
 # dialog that prompts the user to allow the incoming connection.
-remoteIncomingPromptMessage=Objavila sa požiadavka na povolenie vzdialeného ladenia. Vzdialený klient môže kompletne prevziať kontrolu nad vašim prehliadačom. Povoliť pripojenie?
+remoteIncomingPromptHeader=Objavila sa požiadavka na povolenie vzdialeného ladenia. Vzdialený klient môže kompletne prevziať kontrolu nad vašim prehliadačom.
+# LOCALIZATION NOTE (remoteIncomingPromptClientEndpoint): Part of the prompt
+# dialog for the user to choose whether an incoming connection should be
+# allowed.
+# %1$S: The host and port of the client such as "127.0.0.1:6000"
+remoteIncomingPromptClientEndpoint=Koncový bod klienta: %1$S
+# LOCALIZATION NOTE (remoteIncomingPromptServerEndpoint): Part of the prompt
+# dialog for the user to choose whether an incoming connection should be
+# allowed.
+# %1$S: The host and port of the server such as "127.0.0.1:6000"
+remoteIncomingPromptServerEndpoint=Koncový bod servera: %1$S
+# LOCALIZATION NOTE (remoteIncomingPromptFooter): Footer displayed on the
+# dialog that prompts the user to allow the incoming connection.
+remoteIncomingPromptFooter=Povoliť pripojenie?
 
 # LOCALIZATION NOTE (remoteIncomingPromptDisable): The label displayed on the
 # third button in the incoming connection dialog that lets the user disable the
 # remote debugger server.
 remoteIncomingPromptDisable=Zakázať
+
+# LOCALIZATION NOTE (clientSendOOBTitle): The title displayed on the dialog that
+# instructs the user to transfer an authentication token to the server.
+clientSendOOBTitle=Identifikácia klienta
+# LOCALIZATION NOTE (clientSendOOBHeader): Header displayed on the dialog that
+# instructs the user to transfer an authentication token to the server.
+clientSendOOBHeader=Koncový bod, ku ktorému sa pripájate, vyžaduje ďalšie informácie, aby mohol overiť toto pripojenie. Prosím, zadajte nižšie uvedený token do okna, ktoré sa zobrazuje na druhom konci.
+# LOCALIZATION NOTE (clientSendOOBHash): Part of the dialog that instructs the
+# user to transfer an authentication token to the server.
+# %1$S: The client's cert fingerprint
+clientSendOOBHash=Môj certifikát: %1$S
+# LOCALIZATION NOTE (clientSendOOBToken): Part of the dialog that instructs the
+# user to transfer an authentication token to the server.
+# %1$S: The authentication token that the user will transfer.
+clientSendOOBToken=Token: %1$S
+
+# LOCALIZATION NOTE (serverReceiveOOBTitle): The title displayed on the dialog
+# that instructs the user to provide an authentication token from the client.
+serverReceiveOOBTitle=Poskytnutie tokenu klienta
+# LOCALIZATION NOTE (serverReceiveOOBBody): Main text displayed on the dialog
+# that instructs the user to provide an authentication token from the client.
+serverReceiveOOBBody=Klient by mal zobrazovať hodnotu tokena. Aby bolo možné ukončiť overenie, zadajte spomínaný token.
