--- a/de/browser/chrome/browser/loop/loop.properties
+++ b/de/browser/chrome/browser/loop/loop.properties
@@ -253,7 +253,7 @@ connection_error_see_console_notification=Anruf fehlgeschlagen; weitere Details 
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
 ## by the brand name.
-legal_text_and_links3=Mit der Nutzung {{clientShortname}} stimmen Sie den {{terms_of_use}} \
+legal_text_and_links3=Mit der Nutzung von {{clientShortname}} stimmen Sie den {{terms_of_use}} \
   und dem {{privacy_notice}} zu.
 legal_text_tos = Nutzungsbedingungen
 legal_text_privacy = Datenschutzhinweis
