--- a/pl/browser/installer/nsisstrings.properties
+++ b/pl/browser/installer/nsisstrings.properties
@@ -2,27 +2,11 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-# LOCALIZATION NOTE:
-
-# This file must be saved as UTF8
-
-# Accesskeys are defined by prefixing the letter that is to be used for the
-# accesskey with an ampersand (e.g. &).
-
-# Do not replace $BrandShortName, $BrandFullName, or $BrandFullNameDA with a
-# custom string and always use the same one as used by the en-US files.
-# $BrandFullNameDA allows the string to contain an ampersand (e.g. DA stands
-# for double ampersand) and prevents the letter following the ampersand from
-# being used as an accesskey.
-
-# You can use \n to create a newline in the string but only when the string
-# from en-US contains a \n.
-
 WIN_CAPTION=Instalator programu $BrandShortName
 
 INTRO_BLURB1=Dziękujemy za wybranie programu $BrandFullName - przeglądarki, dla której przede wszystkim liczysz się Ty.
 INSTALL_BLURB1=Najnowsze osiągnięcia w dziedzinie wydajności i bezpieczeństwa, aby wszystko było pod Twoją kontrolą.
-INSTALL_BLURB2=To dlatego, że program $BrandShortName tworzy organizacja non-profit, chcąca uczynić WWW lepszym dla Ciebie.
+INSTALL_BLURB2=To dlatego, że program $BrandShortName tworzy organizacja non-profit, chcąca uczynić sieć lepszym miejscem.
 INSTALL_BLURB3=Dołączasz do globalnej społeczności użytkowników i programistów tworzących najlepszą przeglądarkę na świecie.
 
 WARN_MIN_SUPPORTED_OS_MSG=Przepraszamy, programu $BrandShortName nie można zainstalować. Ta wersja przeglądarki $BrandShortName wymaga systemu ${MinSupportedVer} lub nowszego.
