--- a/pl/dom/chrome/security/caps.properties
+++ b/pl/dom/chrome/security/caps.properties
@@ -21,8 +21,8 @@ CallMethodDeniedOriginsSubjectDomain=Witrynie <%1$S> (document.domain=<%5$S>) ni
 CallMethodDeniedOriginsObjectDomain=Witrynie <%1$S> (document.domain nie została ustawiona) nie udzielono uprawnień do wywołania metody %2$S.%3$S na <%4$S> (document.domain=<%5$S>).
 CallMethodDeniedOriginsSubjectDomainObjectDomain=Witrynie <%1$S> (document.domain=<%5$S>) nie udzielono uprawnień do wywołania metody %2$S.%3$S na <%4$S> (document.domain=<%6$S>).
 
-GetPropertyDeniedOriginsOnlySubject=Witrynie <%S> nie udzielono uprawnień do odczytania właściwosci %S.%S
-SetPropertyDeniedOriginsOnlySubject=Witrynie <%S> nie udzielono uprawnień do ustawienia właściwosci %S.%S
+GetPropertyDeniedOriginsOnlySubject=Witrynie <%S> nie udzielono uprawnień do odczytania właściwości %S.%S
+SetPropertyDeniedOriginsOnlySubject=Witrynie <%S> nie udzielono uprawnień do ustawienia właściwości %S.%S
 CallMethodDeniedOriginsOnlySubject=Witrynie <%S> nie udzielono uprawnień do wywołania metody %S.%S
 CreateWrapperDenied=Nie udzielono uprawnień do stworzenia klasy opakowującej dla obiektu klasy %S
 CreateWrapperDeniedForOrigin=Witrynie <%2$S> nie udzielono uprawnień do stworzenia klasy opakowującej dla obiektu klasy %1$S
