--- a/fr/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/fr/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -5,9 +5,10 @@
 # LOCALIZATION NOTE: These strings are used for startup/profile problems and the profile manager.
 
 # Application not responding
-# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
+# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker2, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
 restartTitle=Fermer %S
 restartMessageNoUnlocker=%S est déjà en cours d’exécution mais ne répond pas. Pour ouvrir une nouvelle fenêtre, vous devez d’abord arrêter le processus %S existant ou redémarrer votre système.
+restartMessageNoUnlocker2=%S est déjà en cours d’exécution mais ne répond pas. Pour utiliser %S, vous devez d’abord arrêter le processus %S existant, redémarrer votre appareil ou utiliser un profil différent.
 restartMessageUnlocker=%S est déjà en cours d’exécution mais ne répond pas. L’ancien processus %S doit être arrêté pour pouvoir ouvrir une nouvelle fenêtre.
 restartMessageNoUnlockerMac=Une copie de %S est déjà ouverte. Une seule copie de %S peut être ouverte à la fois.
 restartMessageUnlockerMac=Une copie de %S est déjà ouverte. La copie de %S en cours d’exécution se fermera afin d’ouvrir celle-ci.
