--- a/fr/devtools/client/netmonitor.properties
+++ b/fr/devtools/client/netmonitor.properties
@@ -1062,6 +1062,11 @@ netmonitor.toolbar.timings=Délais
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=En-têtes de réponse
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+netmonitor.headers.toolbar.block=Bloquer
+
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
 netmonitor.summary.url=URL de la requête :
@@ -1111,6 +1116,11 @@ netmonitor.summary.rawHeaders.responseHeaders=En-têtes de réponse :
 # LOCALIZATION NOTE (netmonitor.summary.size): This is the label displayed
 # in the network details headers tab identifying the headers size.
 netmonitor.summary.size=Taille des en-têtes :
+
+# LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
+# on the button in the headers tab that toggle view for raw request/response headers
+# from the currently displayed request
+netmonitor.headers.raw=Texte brut
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
