--- a/be/devtools/client/debugger.properties
+++ b/be/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=Паказаць убудаваны папярэдні 
 # for hiding the inline preview block
 inlinePreview.hide.label=Схаваць убудаваны папярэдні прагляд
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Налады адладчыка
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Адключыць JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Адключае JavaScript (патрабуе абнаўлення)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Няма ўласцівасцей
@@ -740,6 +751,10 @@ watchpoints.getWatchpoint=Чытанне ўласцівасці
 # LOCALIZATION NOTE (watchpoints.setWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
 watchpoints.setWatchpoint=Усталяванне ўласцівасці
+
+# LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
+# watchpoints submenu to add a "set" watchpoint on an object property.
+watchpoints.getOrSetWatchpoint=Атрымаць ці ўстанавіць уласцівасць
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
 # context menu to delete a watchpoint on an object property.
