--- a/be/devtools/client/netmonitor.properties
+++ b/be/devtools/client/netmonitor.properties
@@ -88,23 +88,23 @@ cookiesFilterText=Фільтраваць кукі
 responseEmptyText=Няма даступных дадзеных адказу для гэтага запыту
 
 # LOCALIZATION NOTE (paramsEmptyText): This is the text displayed in the
-# params tab of the network details pane when there are no params available.
+# request tab of the network details pane when there are no params available.
 paramsEmptyText=У гэтым запыце няма параметраў
 
 # LOCALIZATION NOTE (paramsFilterText): This is the text displayed in the
-# params tab of the network details pane for the filtering input.
+# request tab of the network details pane for the filtering input.
 paramsFilterText=Фільтраваць параметры запыту
 
 # LOCALIZATION NOTE (paramsQueryString): This is the label displayed
-# in the network details params tab identifying the query string.
+# in the network details request tab identifying the query string.
 paramsQueryString=Радок запыту
 
 # LOCALIZATION NOTE (paramsFormData): This is the label displayed
-# in the network details params tab identifying the form data.
+# in the network details request tab identifying the form data.
 paramsFormData=Дадзеныя формы
 
 # LOCALIZATION NOTE (paramsPostPayload): This is the label displayed
-# in the network details params tab identifying the request payload.
+# in the network details request tab identifying the request payload.
 paramsPostPayload=Цела запыту
 
 # LOCALIZATION NOTE (requestHeaders): This is the label displayed
@@ -121,11 +121,11 @@ requestHeadersFromUpload=Загалоўкі запыта струменя зац
 responseHeaders=Загалоўкі водгуку
 
 # LOCALIZATION NOTE (requestCookies): This is the label displayed
-# in the network details params tab identifying the request cookies.
+# in the network details request tab identifying the request cookies.
 requestCookies=Кукі запыту
 
 # LOCALIZATION NOTE (responseCookies): This is the label displayed
-# in the network details params tab identifying the response cookies.
+# in the network details request tab identifying the response cookies.
 responseCookies=Кукі водгуку
 
 # LOCALIZATION NOTE (responsePayload): This is the label displayed
@@ -150,7 +150,7 @@ jsonpScopeName=JSONP → callback %S()
 responseTruncated=Адказ быў скарочаны
 
 # LOCALIZATION NOTE (requestTruncated): This is the text displayed
-# in the params tab of the network details pane when the request is over
+# in the request tab of the network details pane when the request is over
 # the truncation limit and thus was truncated.
 requestTruncated=Запыт быў скарочаны
 
@@ -867,6 +867,18 @@ netmonitor.actionbar.removeBlockedUrl=Выдаліць узор
 # tooltip shown over the Add Blocked URL button
 netmonitor.actionbar.addBlockedUrl=Дадаць узор
 
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.removeAllBlockedUrls): This is the
+# context menu item for removing all blocked URLs
+netmonitor.requestBlockingMenu.removeAllBlockedUrls=Выдаліць усе
+
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.enableAllBlockedUrls): This is the
+# context menu item for enabling all blocked URLs
+netmonitor.requestBlockingMenu.enableAllBlockedUrls=Уключыць усе
+
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.disableAllBlockedUrls): This is the
+# context menu item for disabling all blocked URLs
+netmonitor.requestBlockingMenu.disableAllBlockedUrls=Адключыць усе
+
 # LOCALIZATION NOTE (netmonitor.actionbar.search): This is the label displayed
 # in the action bar's search tab
 netmonitor.actionbar.search=Пошук
@@ -908,6 +920,10 @@ netmonitor.tab.cache=Кэш
 # LOCALIZATION NOTE (netmonitor.tab.params): This is the label displayed
 # in the network details pane identifying the params tab.
 netmonitor.tab.params=Параметры
+
+# LOCALIZATION NOTE (netmonitor.tab.request): This is the label displayed
+# in the network details pane identifying the request tab.
+netmonitor.tab.request=Запыт
 
 # LOCALIZATION NOTE (netmonitor.tab.response): This is the label displayed
 # in the network details pane identifying the response tab.
@@ -1046,6 +1062,11 @@ netmonitor.toolbar.timings=Таймінгі
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=Загалоўкі адказу
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+netmonitor.headers.toolbar.block=Блакаваць
+
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
 netmonitor.summary.url=URL запыту:
@@ -1095,6 +1116,11 @@ netmonitor.summary.rawHeaders.responseHeaders=Загалоўкі адказа:
 # LOCALIZATION NOTE (netmonitor.summary.size): This is the label displayed
 # in the network details headers tab identifying the headers size.
 netmonitor.summary.size=Памер загалоўкаў:
+
+# LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
+# on the button in the headers tab that toggle view for raw request/response headers
+# from the currently displayed request
+netmonitor.headers.raw=Без фармату
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
@@ -1533,3 +1559,19 @@ netmonitor.cache.lastModified=Апошняе змяненне
 # LOCALIZATION NOTE (netmonitor.cache.device): This is the label text for the device
 # where a cached object was fetched from (e.g. "disk").
 netmonitor.cache.device=Прылада
+
+# LOCALIZATION NOTE (netmonitor.settings.menuTooltip): This is the tooltip that gets displayed
+# when the settings menu button is hovered.
+netmonitor.settings.menuTooltip=Налады сеткі
+
+# LOCALIZATION NOTE (netmonitor.settings.importHarTooltip): This is the tooltip that gets displayed
+# when the HAR import menu item is hovered
+netmonitor.settings.importHarTooltip=Імпартаваць файл HAR з сеткавымі дадзенымі
+
+# LOCALIZATION NOTE (netmonitor.settings.saveHarTooltip): This is the tooltip that gets displayed
+# when the HAR save menu item is hovered
+netmonitor.settings.saveHarTooltip=Запісаць сеткавыя дадзеныя ў файл HAR
+
+# LOCALIZATION NOTE (netmonitor.settings.copyHarTooltip): This is the tooltip that gets displayed
+# when the HAR copy menu item is hovered
+netmonitor.settings.copyHarTooltip=Капіраваць сеткавыя дадзеныя ў буфер абмену
