--- a/zh-TW/netwerk/necko.properties
+++ b/zh-TW/netwerk/necko.properties
@@ -57,6 +57,10 @@ CookieAllowedForOriginOnTrackerByHeuristic=已自動允許位於「%1$S」的追
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=已自動允許位於「%1$S」的追蹤器「%2$S」存取儲存空間。
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=已允許「%2$S」存取位於「%1$S」的儲存空間。
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=已自動允許「%2$S」存取位於「%1$S」的儲存空間。
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=已自動針對位於「%1$S」上第一方隔離的「%2$S」允許存取儲存空間。
 
