--- a/vi/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/vi/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -17,3 +17,4 @@ unknownCancel.label=Hủy bỏ
 fileType=Tập tin %S
 # LOCALIZATION NOTE (orderedFileSizeWithType): first %S is type, second %S is size, and third %S is unit  
 orderedFileSizeWithType=%1$S (%2$S %3$S)
+pdfHandlerDescription=Định dạng tài liệu di động (PDF)
