--- a/vi/devtools/client/netmonitor.properties
+++ b/vi/devtools/client/netmonitor.properties
@@ -265,13 +265,13 @@ networkMenu.sizeUnavailable=—
 networkMenu.sizeUnavailable.title=Kích thước truyền tải không có sẵn
 
 # LOCALIZATION NOTE (networkMenu.sizeCached): This is the label displayed
-# in the network menu specifying the transfer or a request is
+# in the network menu and the headers panel specifying the transfer or a request is
 # cached.
 networkMenu.sizeCached=đã lưu trữ
 
 # LOCALIZATION NOTE (networkMenu.sizeServiceWorker): This is the label displayed
-# in the network menu specifying the transferred of a request computed
-# by a service worker.
+# in the network menu and the headers panel specifying the transferred of a request
+# computed by a service worker.
 networkMenu.sizeServiceWorker=service worker
 
 # LOCALIZATION NOTE (networkMenu.sizeServiceWorker): This is the label displayed
@@ -282,6 +282,11 @@ networkMenu.blockedBy=bị chặn bởi %S
 # LOCALIZATION NOTE (networkMenu.blocked2): This is a generic message for a
 # URL that has been blocked for an unknown reason
 networkMenu.blocked2=Đã chặn
+
+# LOCALIZATION NOTE (networkMenu.blockedby): This is a generic message for a
+# URL that has been blocked by an extension
+# %S is the extension name.
+networkMenu.blockedby=Bị chặn bởi %S
 
 # LOCALIZATION NOTE (networkMenu.blockedTooltip): This is a the text displayed
 # as a tooltip for the blocked icon in the request list
@@ -686,8 +691,8 @@ netmonitor.toolbar.duration=Thời gian
 netmonitor.toolbar.latency=Độ trễ
 
 # LOCALIZATION NOTE (netmonitor.toolbar.transferred): This is the label displayed
-# in the network table toolbar, above the "transferred" column, which is the
-# compressed / encoded size.
+# in the network table toolbar, above the "transferred" column and in general 
+# section of the headers panel, which is the compressed / encoded size.
 netmonitor.toolbar.transferred=Đã truyền tải
 
 # LOCALIZATION NOTE (netmonitor.toolbar.contentSize): This is the label displayed
@@ -864,6 +869,14 @@ netmonitor.actionbar.removeBlockedUrl=Xóa mẫu
 # LOCALIZATION NOTE (netmonitor.actionbar.addBlockedUrl): This is the
 # tooltip shown over the Add Blocked URL button
 netmonitor.actionbar.addBlockedUrl=Thêm mẫu
+
+# LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
+# usage notice displayed when network blocking list is empty
+netmonitor.actionbar.requestBlockingUsageNotice=Thêm các mẫu URL ở đây để chặn các yêu cầu phù hợp.
+
+# LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingAddNotice): This is the
+# add notice that explains ways to add blocking pattern that is displayed when
+# network blocking list is empty
 
 # LOCALIZATION NOTE (netmonitor.requestBlockingMenu.removeAllBlockedUrls): This is the
 # context menu item for removing all blocked URLs
@@ -1060,10 +1073,6 @@ netmonitor.toolbar.timings=Thời gian
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=Phản hồi header
 
-# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
-# label displayed in the network details headers tab identifying the
-# block url toolbar button.
-
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
 netmonitor.summary.url=URL yêu cầu:
@@ -1084,6 +1093,32 @@ netmonitor.summary.status=Mã trạng thái:
 # in the network details headers tab identifying the http version.
 netmonitor.summary.version=Phiên bản:
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+netmonitor.headers.toolbar.block=Chặn
+
+# LOCALIZATION NOTE (netmonitor.headers.address): This is the label displayed
+# in the network details headers tab identifying the remote address.
+netmonitor.headers.address=Địa chỉ
+
+# LOCALIZATION NOTE (netmonitor.headers.status): This is the label displayed
+# in the network details headers tab identifying the status code.
+netmonitor.headers.status=Trạng thái
+
+# LOCALIZATION NOTE (netmonitor.headers.size): This is the label displayed
+# in the network details headers tab identifying the size.
+netmonitor.headers.size=Kích thước
+
+# LOCALIZATION NOTE (networkMenu.headers.sizeDetails): This label is displayed
+# in the network details headers tab providing the size details.
+# %1$S is the transferred size, %2$S is the size.
+netmonitor.headers.sizeDetails=%1$S (kích thước %2$S)
+
+# LOCALIZATION NOTE (netmonitor.headers.version): This is the label displayed
+# in the network details headers tab identifying the http version.
+netmonitor.headers.version=Phiên bản
+
 # LOCALIZATION NOTE (netmonitor.summary.learnMore): This is the label displayed
 # in the network details headers tab, with a link to external documentation.
 netmonitor.summary.learnMore=Tìm hiểu thêm về mã trạng thái
@@ -1091,6 +1126,13 @@ netmonitor.summary.learnMore=Tìm hiểu thêm về mã trạng thái
 # LOCALIZATION NOTE (netmonitor.summary.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
 netmonitor.summary.referrerPolicy=Chính sách referrer:
+
+# LOCALIZATION NOTE (netmonitor.headers.referrer): This is the label displayed
+# in the network details headers tab identifying the referrer policy.
+
+# LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
+# in the network details headers tab identifying the content blocking mode.
+netmonitor.headers.contentBlocking=Đang chặn
 
 # LOCALIZATION NOTE (netmonitor.summary.editAndResend): This is the label displayed
 # on the button in the headers tab that opens a form to edit and resend the currently
@@ -1117,6 +1159,7 @@ netmonitor.summary.size=Kích cỡ header:
 # LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
 # on the button in the headers tab that toggle view for raw request/response headers
 # from the currently displayed request
+netmonitor.headers.raw=Raw
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
@@ -1236,6 +1279,10 @@ netmonitor.security.certificate=Chứng chỉ:
 # LOCALIZATION NOTE (netmonitor.trackingResource.tooltip): This is the label used
 # in the Network monitor panel as a tooltip for tracking resource icon.
 netmonitor.trackingResource.tooltip=URL này khớp với trình theo dõi đã biết và nó sẽ bị chặn khi bật chặn nội dung.
+
+# LOCALIZATION NOTE (netmonitor.trackingResource.enhancedTrackingProtection): This is 
+# the label used in the Network monitor panel for showing enhanced tracking protection.
+netmonitor.trackingResource.enhancedTrackingProtection=Trình chống theo dõi nâng cao
 
 # LOCALIZATION NOTE (netmonitor.context.copy): This is the label displayed
 # for the copy sub-menu in the context menu for a request
